fixed spacing in nav bar

--- a/css/gahan-styles.css
+++ b/css/gahan-styles.css
@@ -24,7 +24,7 @@ nav .brand-logo{
 
 .side-nav li,.side-nav.fixed a,.side-nav a{
 	line-height: 40px;
-	height: 40px;
+	height: 55px;
 	color: #fafafa;
 }
 
